CORS and Security example for OpenAPI
